--- a/wlht/src/components/css/common.scss
+++ b/wlht/src/components/css/common.scss
@@ -55,3 +55,9 @@
     border-color: rgba(127, 99, 244, 1);
     background-color: rgba(127, 99, 244, 1);
   }
+/** 滚动条样式*/
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: RGBA(243, 243, 243, 1);
+}
