--- a/wlht/src/components/css/common.scss
+++ b/wlht/src/components/css/common.scss
@@ -70,3 +70,9 @@ input::placeholder{
 textarea::placeholder{
   color: #c0C4CC;
 }
+.el-date-editor .el-range-separator{
+  height: auto;
+}
+.el-upload__tip{
+  margin-left: 15%;
+}
